Update Firebase authDomain to fizo.uk

--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
     // Your Firebase config (replace with your actual values from Firebase Console)
     const firebaseConfig = {
       apiKey: "AIzaSyDE9A-zIXDHPffYf0-l256TF2VHKHZaq60",
-      authDomain: "fizoai.firebaseapp.com",
+      authDomain: "fizo.uk",
       projectId: "fizoai",
       storageBucket: "fizoai.firebasestorage.app",
       messagingSenderId: "880650940716",
